zybo_petalinux_vga/ast/.metadata/.plugins/org.eclipse.cdt.ui/digilent_example_standalone_0.build.log
00:25:23 **** Auto Build of configuration Debug for project digilent_example_standalone_0 ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/display_ctrl.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/display_ctrl.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../FSBLvga_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/display_ctrl.d" -MT"src/display_ctrl.o" -o "src/display_ctrl.o" "../src/display_ctrl.c"
'Finished building: ../src/display_ctrl.c'
' '
'Building file: ../src/display_demo.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/display_demo.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../FSBLvga_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/display_demo.d" -MT"src/display_demo.o" -o "src/display_demo.o" "../src/display_demo.c"
'Finished building: ../src/display_demo.c'
' '
'Building file: ../src/main.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/main.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../FSBLvga_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/main.d" -MT"src/main.o" -o "src/main.o" "../src/main.c"
../src/main.c: In function 'main':
../src/main.c:18:21: error: 'XPAR_AXIVDMA_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXI_VDMA_0_DEVICE_ID'?
 #define VGA_VDMA_ID XPAR_AXIVDMA_0_DEVICE_ID
                     ^
../src/main.c:32:34: note: in expansion of macro 'VGA_VDMA_ID'
  DisplayDemoInitialize(&vgaCtrl, VGA_VDMA_ID, SCU_TIMER_ID, VGA_BASEADDR, DISPLAY_NOT_HDMI, vgaPtr);
                                  ^~~~~~~~~~~
../src/main.c:18:21: note: each undeclared identifier is reported only once for each function it appears in
 #define VGA_VDMA_ID XPAR_AXIVDMA_0_DEVICE_ID
                     ^
../src/main.c:32:34: note: in expansion of macro 'VGA_VDMA_ID'
  DisplayDemoInitialize(&vgaCtrl, VGA_VDMA_ID, SCU_TIMER_ID, VGA_BASEADDR, DISPLAY_NOT_HDMI, vgaPtr);
                                  ^~~~~~~~~~~
../src/main.c:19:22: error: 'XPAR_SCUTIMER_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_AXIVDMA_0_DEVICE_ID'?
 #define SCU_TIMER_ID XPAR_SCUTIMER_DEVICE_ID
                      ^
../src/main.c:32:47: note: in expansion of macro 'SCU_TIMER_ID'
  DisplayDemoInitialize(&vgaCtrl, VGA_VDMA_ID, SCU_TIMER_ID, VGA_BASEADDR, DISPLAY_NOT_HDMI, vgaPtr);
                                               ^~~~~~~~~~~~
../src/main.c:20:23: error: 'XPAR_PS7_UART_1_BASEADDR' undeclared (first use in this function); did you mean 'XPAR_AXI_VDMA_0_BASEADDR'?
 #define UART_BASEADDR XPAR_PS7_UART_1_BASEADDR
                       ^
../src/main.c:37:28: note: in expansion of macro 'UART_BASEADDR'
   DisplayDemoRun(&vgaCtrl, UART_BASEADDR);
                            ^~~~~~~~~~~~~
make: *** [src/main.o] Œ¯Ë·Í‡ 1

00:25:25 Build Finished (took 2s.267ms)

